# z_module

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
examples/: CMakeLists.txt
examples/src/: example.cpp
include/: z_module.hpp  z_module_algs.hpp
include/detail/: common_type.hpp  concepts.hpp  io_helper.hpp  prime_check.hpp
tests/: CMakeLists.txt
tests/src/: addition.cpp  constructors.cpp  increment_decrement.cpp  validation_test.cpp
